--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
       <div class="col-lg-3 col-md-4 col-6" id="divZoom">
         <a href="#" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="">
+          <img class="img-fluid img-thumbnail" id="myImg" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
@@ -79,7 +79,21 @@
         </a>
       </div>
     </div>
+
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+    <!-- The Close Button -->
+    <span class="close">&times;</span>
   
+    <!-- Modal Content (The Image) -->
+    <img class="modal-content" id="img01">
+  
+    <!-- Modal Caption (Image Text) -->
+    <div id="caption"></div>
+  </div>
+
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="index.js"></script>
