--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
 </head>
 <body>
+
+
+
+
     <!-- Page Content -->
 <div class="container">
 
@@ -18,80 +22,87 @@
   
     <div class="row text-center text-lg-start" id="containerPrincipal">
   
+
       <div class="col-lg-3 col-md-4 col-6" id="divZoom">
         <a href="#" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" id="myImg" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="myImg" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="Palmeras">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="#" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/aob0ukAYfuI/400x300" alt="">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/aob0ukAYfuI/400x300" alt="Skater">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="#" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/EUfxH-pze7s/400x300" alt="">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/EUfxH-pze7s/400x300" alt="Arbol">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="#" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/M185_qYH8vg/400x300" alt="">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/M185_qYH8vg/400x300" alt="Buzo">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="#" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/sesveuG_rNo/400x300" alt="">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/sesveuG_rNo/400x300" alt="Libertad">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="#" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/AvhMzHwiE_0/400x300" alt="">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/AvhMzHwiE_0/400x300" alt="Esperanza">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="#" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/2gYsZUmockw/400x300" alt="">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/2gYsZUmockw/400x300" alt="Temeridad">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="#" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/EMSDtjVHdQ8/400x300" alt="">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/EMSDtjVHdQ8/400x300" alt="Surf">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="#" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/8mUEy0ABdNE/400x300" alt="">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/8mUEy0ABdNE/400x300" alt="Skater 2">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="#" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/G9Rfc1qccH4/400x300" alt="">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/G9Rfc1qccH4/400x300" alt="No pude encontrar la foto">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="#" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/aJeH0KcFkuc/400x300" alt="">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/aJeH0KcFkuc/400x300" alt="Desierto">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="#" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/p2TQ-3Bh3Oo/400x300" alt="">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/p2TQ-3Bh3Oo/400x300" alt="Cañon">
         </a>
       </div>
     </div>
-
-
-    <!-- The Modal -->
-    <div id="myModal" class="modal">
-
-    <!-- The Close Button -->
-    <span class="close">&times;</span>
+    <!-- Button trigger modal -->
+>
   
-    <!-- Modal Content (The Image) -->
-    <img class="modal-content" id="img01">
-  
-    <!-- Modal Caption (Image Text) -->
-    <div id="caption"></div>
+  <!-- Modal -->
+  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body" id="modal-body">
+          <img src="" alt="" id="imagenCargar">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
   </div>
 
   </div>
