--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body" id="modal-body">
-          <img src="" alt="" id="imagenCargar">
+          <img src="" alt="" id="imagenCargar" width="100%">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
