Adiccion de cards y transicion con item que son columnas para poner iconos de me gusta etc etc, javascript de transicion de sprites casi hechos

--- a/index.html
+++ b/index.html
@@ -21,64 +21,120 @@
   
     <div class="row text-center text-lg-start" id="containerPrincipal">
   
-
       <div class="col-lg-3 col-md-4 col-6" id="divZoom">
-        <a href="#" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="myImg" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="Palmeras">
-        </a>
+        <div class="card">
+          <a href="#">
+            <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="myImg" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="Palmeras">
+          </a>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+              <div class="row">
+                <div class="col-4">
+                  <img class="iconosCorazon" alt="">
+                </div> 
+                <div class="col-4">
+                  Item
+                </div> 
+                <div class="col-4">
+                  Item
+                </div>  
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
+      
       <div class="col-lg-3 col-md-4 col-6">
-        <a href="#" class="d-block mb-4 h-100">
+        <div class="card">
+        <a href="#">
           <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/aob0ukAYfuI/400x300" alt="Skater">
         </a>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">An item</li>
+        </ul>
+      </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <a href="#" class="d-block mb-4 h-100">
+        <div class="card">
+        <a href="#">
           <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/EUfxH-pze7s/400x300" alt="Arbol">
         </a>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">An item</li>
+        </ul>
+      </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <a href="#" class="d-block mb-4 h-100">
+        <div class="card">
+        <a href="#">
           <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/M185_qYH8vg/400x300" alt="Buzo">
         </a>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">An item</li>
+        </ul>
+      </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <a href="#" class="d-block mb-4 h-100">
+        <div class="card">
+        <a href="#">
           <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/sesveuG_rNo/400x300" alt="Libertad">
         </a>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">An item</li>
+        </ul>
+      </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <a href="#" class="d-block mb-4 h-100">
+        <div class="card">
+        <a href="#">
           <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/AvhMzHwiE_0/400x300" alt="Esperanza">
         </a>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">An item</li>
+        </ul>
+      </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <a href="#" class="d-block mb-4 h-100">
+        <div class="card">
+        <a href="#">
           <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/2gYsZUmockw/400x300" alt="Temeridad">
         </a>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">An item</li>
+        </ul>
+      </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <a href="#" class="d-block mb-4 h-100">
+        <div class="card">
+        <a href="#">
           <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/EMSDtjVHdQ8/400x300" alt="Surf">
         </a>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">An item</li>
+        </ul>
+      </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <a href="#" class="d-block mb-4 h-100">
+        <div class="card"></div>
+        <a href="#">
           <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/8mUEy0ABdNE/400x300" alt="Skater 2">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <a href="#" class="d-block mb-4 h-100">
+        <div class="card"></div>
+        <a href="#">
           <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/G9Rfc1qccH4/400x300" alt="No pude encontrar la foto">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <a href="#" class="d-block mb-4 h-100">
+        <div class="card"></div>
+        <a href="#">
           <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/aJeH0KcFkuc/400x300" alt="Desierto">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <a href="#" class="d-block mb-4 h-100">
+        <div class="card"></div>
+        <a href="#">
           <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/p2TQ-3Bh3Oo/400x300" alt="Cañon">
         </a>
       </div>
