Adiccion de cards y transicion con item que son columnas para poner iconos de me gusta etc etc, javascript de transicion de sprites casi hechos 2

--- a/index.html
+++ b/index.html
@@ -50,7 +50,19 @@
           <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/aob0ukAYfuI/400x300" alt="Skater">
         </a>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">An item</li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-4">
+                <img class="iconosCorazon" alt="">
+              </div> 
+              <div class="col-4">
+                Item
+              </div> 
+              <div class="col-4">
+                Item
+              </div>  
+            </div>
+          </li>
         </ul>
       </div>
       </div>
