Adiccion de corazones falta colocar que hizo un me gusta en esa foto

--- a/index.html
+++ b/index.html
@@ -29,15 +29,12 @@
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
               <div class="row">
-                <div class="col-4">
+                <div class="col-6">
                   <img class="iconosCorazon" alt="">
                 </div> 
-                <div class="col-4">
+                <div class="col-6">
                   Item
                 </div> 
-                <div class="col-4">
-                  Item
-                </div>  
               </div>
             </li>
           </ul>
@@ -52,11 +49,8 @@
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <div class="row">
-              <div class="col-4">
+              <div class="col-6">
                 <img class="iconosCorazon" alt="">
-              </div> 
-              <div class="col-4">
-                Item
               </div> 
               <div class="col-4">
                 Item
@@ -166,7 +160,7 @@
           <img src="" alt="" id="imagenCargar" width="100%">
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <span id="megustaText">Le has dado "Me gusta" a esta foto</span> 
         </div>
       </div>
     </div>
