Funcionando, cambios en java, foreach imagenes e iconos

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <div class="container">
 
     <h1 class="fw-light text-center text-lg-start mt-4 mb-0">Thumbnail Gallery</h1>
+    <h2 class="fw-light text-center text-lg-start mt-4 mb-0">Playstation 1 Games</h2>
   
     <hr class="mt-2 mb-5">
   
@@ -24,16 +25,13 @@
       <div class="col-lg-3 col-md-4 col-6" id="divZoom">
         <div class="card">
           <a href="#">
-            <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="myImg" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="Palmeras">
+            <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="myImg" src="Imagenes/img1.jpg" alt="Super Mario 64">
           </a>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
               <div class="row">
-                <div class="col-6">
+                <div class="col-12">
                   <img class="iconosCorazon" alt="">
-                </div> 
-                <div class="col-6">
-                  Item
                 </div> 
               </div>
             </li>
@@ -44,17 +42,14 @@
       <div class="col-lg-3 col-md-4 col-6">
         <div class="card">
         <a href="#">
-          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/aob0ukAYfuI/400x300" alt="Skater">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="Imagenes/img2.jpg" alt="Crash Bandicoot">
         </a>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <div class="row">
-              <div class="col-6">
+              <div class="col-12">
                 <img class="iconosCorazon" alt="">
               </div> 
-              <div class="col-4">
-                Item
-              </div>  
             </div>
           </li>
         </ul>
@@ -63,86 +58,162 @@
       <div class="col-lg-3 col-md-4 col-6">
         <div class="card">
         <a href="#">
-          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/EUfxH-pze7s/400x300" alt="Arbol">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="Imagenes/img3.jpg" alt="Ratchet & Clank">
         </a>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">An item</li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-12">
+                <img class="iconosCorazon" alt="">
+              </div> 
+            </div>
+          </li>
         </ul>
       </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <div class="card">
         <a href="#">
-          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/M185_qYH8vg/400x300" alt="Buzo">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="Imagenes/img4.jpg" alt="Final Fantasy VIII">
         </a>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">An item</li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-12">
+                <img class="iconosCorazon" alt="">
+              </div> 
+            </div>
+          </li>
         </ul>
       </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <div class="card">
         <a href="#">
-          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/sesveuG_rNo/400x300" alt="Libertad">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="Imagenes/img5.png" alt="Resident Evil 3">
         </a>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">An item</li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-12">
+                <img class="iconosCorazon" alt="">
+              </div> 
+            </div>
+          </li>
         </ul>
       </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <div class="card">
         <a href="#">
-          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/AvhMzHwiE_0/400x300" alt="Esperanza">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="Imagenes/img6.jpg" alt="Digiom World">
         </a>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">An item</li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-12">
+                <img class="iconosCorazon" alt="">
+              </div> 
+            </div>
+          </li>
         </ul>
       </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <div class="card">
         <a href="#">
-          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/2gYsZUmockw/400x300" alt="Temeridad">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="Imagenes/img7.jpg" alt="Medievil">
         </a>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">An item</li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-12">
+                <img class="iconosCorazon" alt="">
+              </div> 
+            </div>
+          </li>
         </ul>
       </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <div class="card">
         <a href="#">
-          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/EMSDtjVHdQ8/400x300" alt="Surf">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="Imagenes/img8.jpg" alt="Dino Crisis">
         </a>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">An item</li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-12">
+                <img class="iconosCorazon" alt="">
+              </div> 
+            </div>
+          </li>
         </ul>
       </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card"></div>
+        <div class="card">
         <a href="#">
-          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/8mUEy0ABdNE/400x300" alt="Skater 2">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="Imagenes/img9.jpg" alt="Metal Gear Solid">
         </a>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-12">
+                <img class="iconosCorazon" alt="">
+              </div> 
+            </div>
+          </li>
+        </ul>
+      </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card"></div>
+        <div class="card">
         <a href="#">
-          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/G9Rfc1qccH4/400x300" alt="No pude encontrar la foto">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="Imagenes/img10.jpg" alt="Tarzan">
         </a>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-12">
+                <img class="iconosCorazon" alt="">
+              </div> 
+            </div>
+          </li>
+        </ul>
+      </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card"></div>
+        <div class="card">
         <a href="#">
-          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/aJeH0KcFkuc/400x300" alt="Desierto">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="Imagenes/img11.jpg" alt="Medal of Honor">
         </a>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-12">
+                <img class="iconosCorazon" alt="">
+              </div> 
+            </div>
+          </li>
+        </ul>
+      </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card"></div>
+        <div class="card">
         <a href="#">
-          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://source.unsplash.com/p2TQ-3Bh3Oo/400x300" alt="Cañon">
+          <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="Imagenes/img12.jpg" alt="Crash Team Racing">
         </a>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-12">
+                <img class="iconosCorazon" alt="">
+              </div> 
+            </div>
+          </li>
+        </ul>
+      </div>
       </div>
     </div>
     <!-- Button trigger modal -->
