Funcionando, cambios en java, foreach imagenes e iconos

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="col-lg-3 col-md-4 col-6" id="divZoom">
         <div class="card">
           <a href="#">
-            <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="myImg" src="Imagenes/img1.jpg" alt="Super Mario 64">
+            <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="myImg" src="Imagenes/img1.jpg" alt="Rayman 2">
           </a>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
