--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   
     <div class="row text-center text-lg-start" id="containerPrincipal">
   
-      <div class="col-lg-3 col-md-4 col-6" id="divZoom">
+      <div class="col-lg-3 col-md-4 col-6">
         <div class="card">
           <a href="#">
             <img class="img-fluid img-thumbnail" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="myImg" src="Imagenes/img1.jpg" alt="Rayman 2">
